Fix: Layout issue on image grid on apartment

--- a/src/index.css
+++ b/src/index.css
@@ -20,14 +20,14 @@ body {
   }
 
   h2 {
-    @apply font-bold text-2xl md:text-4xl tracking-tight;
+    @apply text-3xl font-extrabold tracking-tight md:text-4xl;
   }
 
   h3 {
-    @apply font-bold text-xl md:text-2xl tracking-tight;
+    @apply text-lg font-bold tracking-tight md:text-xl;
   }
 
   h4 {
-    @apply font-bold text-lg md:text-xl tracking-tight;
+    @apply text-base font-bold tracking-tight md:text-lg;
   }
 }
